axum-macros/tests/debug_handler/fail/invalid_attrs.stderr
error: expected `state`
 --> tests/debug_handler/fail/invalid_attrs.rs:3:17
  |
3 | #[debug_handler(foo)]
  |                 ^^^
